fix: heading size on mobile

--- a/components/Article/Article.module.scss
+++ b/components/Article/Article.module.scss
@@ -110,7 +110,7 @@
 .metadata {
   display: block;
   color: var(--text-secondary-color);
-  font-size: 1rem;
+  font-size: 1em;
 
   a {
     text-decoration: none;
