--- a/styles/global.css
+++ b/styles/global.css
@@ -115,9 +115,18 @@ article .anchor:hover:before {
 
 .toc {
   border-radius: 4px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background: var(--background-inset-color);
-  box-shadow: inset 0 8px 6px -6px var(--background-inset-shadow-color);
-  font-size: 1.1rem;
+  /* box-shadow: inset 0 8px 6px -6px var(--background-inset-shadow-color); */
+  font-size: 1rem;
 }
+
+@media (width >= 600px) {
+  .toc {
+    font-size: 1.1rem;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
